--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -560,8 +560,9 @@ $B$ denotes the number of Bootstrap samples. } %TODO: caption.
 
 
 \subsection{High dimensional classifiers}
-Inspecting Figure~\ref{fig:simulation_11}, or any other figure until now, it can be seen that Hotelling's $T^2$ test has similar power to the best performing accuracy tests. 
-It may thus be argued that the real advantage of the population tests is due to their adaptation to high dimension bu regulirizing (\emph{sd} and \emph{Hotelling.shrink}).
+Inspecting Figure~\ref{fig:simulation_11} (for instance), it can be seen that Hotelling's $T^2$ test has similar power to accuracy tests. 
+It should thus be argued that the real advantage of the population tests is due to their adaptation to high dimension by regularization (\emph{sd} and \emph{Hotelling.shrink}), and not only to discretization.
+
 
 
 \bigskip
