--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -564,8 +564,13 @@ Inspecting Figure~\ref{fig:simulation_11} (for instance), it can be seen that Ho
 It should thus be argued that the real advantage of the population tests is due to their adaptation to high dimension by regularization (\emph{sd} and \emph{Hotelling.shrink}), and not only to discretization.
 To study this, we call upon several regulirized classifiers, desifned for high dimensional problems. 
 In the spirit of the regulirized covariance of \emph{Hotelling.shrink}, we try an $l_2$ regulirized svm \cite{friedman_regularization_2010}, and shrinkage based LDA \citep{pang_shrinkage-based_2009,ramey_high-dimensional_2016}. %TODO: verify references
-In the spirit of the diagonilized covariance of \emph{sd}, we try a diagonlized LDA \cite{dudoit_comparison_2002}, which can be thought of a method intersecting Fisher's LDA and Naive Bayes. 
+In the spirit of the diagonilized covariance of \emph{sd}, we try a diagonlized LDA \citep{dudoit_comparison_2002}, which can be thought of a method intersecting Fisher's LDA and Naive Bayes. 
 
+
+Simulation results reported in Figure~\ref{fig:highdim} with naming conventions in Table~\ref{tab:collected_3}.
+It can be seen that regulirizing a classifier in high dimension, just like a parameter test, improves power. 
+It can also be seen that (regulirized) parameter tests are still more powerful than (regulirized) accuracy tests. 
+This was to be expecetd, since we already saw in (e.g. Figure~\ref{fig:simulation_11}) that the \emph{unregulirized} parameter test is slightly more powerful than the \emph{unregulirized} accuracy test. 
 
 \bigskip
 
@@ -597,7 +602,7 @@ The same as Table~\ref{tab:collected} for regulirized (high dimensional) predict
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/2016-08-12 07:38:43"}
 	  \caption{\textbf{HighDim Classifier: TODO}. } %TODO: caption
-	\label{fig:golland}
+	\label{fig:highdim}
 \end{figure}
 
 
