--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -570,7 +570,7 @@ In the spirit of the diagonilized covariance of \emph{sd}, we try a diagonlized 
 Simulation results reported in Figure~\ref{fig:highdim} with naming conventions in Table~\ref{tab:collected_3}.
 It can be seen that regulirizing a classifier in high dimension, just like a parameter test, improves power. 
 It can also be seen that (regulirized) parameter tests are still more powerful than (regulirized) accuracy tests. 
-This was to be expecetd, since we already saw in (e.g. Figure~\ref{fig:simulation_11}) that the \emph{unregulirized} parameter test is slightly more powerful than the \emph{unregulirized} accuracy test. 
+This was to be expecetd, since we already saw in (e.g. Figure~\ref{fig:simulation_11}) that the unregulirized parameter test, \emph{Hotelling}, is slightly more powerful than the unregulirized accuracy test, \emph{svm.CV.1} for instance.
 
 \bigskip
 
