--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -546,7 +546,7 @@ $B$ denotes the number of Bootstrap samples. } %TODO: caption.
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/2016-08-09 20:09:20"}
 	  \caption{
-		  \textbf{Bootstrap:}
+		  \textbf{Bootstrap--}
 		  The power of a permutation test with various test statistics. 
 		  The power on the $x$ axis. 
 		  Effect are color and shape coded. 
@@ -605,7 +605,7 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/2016-08-12 07:38:43"}
-	  \caption{\textbf{HighDim Classifier: TODO}. } %TODO: caption
+	  \caption{\textbf{HighDim Classifier-- TODO}. } %TODO: caption
 	\label{fig:highdim}
 \end{figure}
 
@@ -642,7 +642,7 @@ We find that in this mixture class of models, like the location class of models,
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/2016-08-08 07:33:05"}
-	  \caption{\textbf{Mixture:} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
+	  \caption{\textbf{Mixture--} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
 	  The effect, $p$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green triangle) and $1/2$ (blue square). }
 	\label{fig:golland}
 \end{figure}
@@ -821,13 +821,13 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-30 10:33:05"}
-	  \caption{\textbf{Scale Change:} $\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effect are a scale change.}  
+	  \caption{\textbf{Scale Change--} $\x_i =  \eta_i * \mu^ {\y^*_i}$ so that the effect are a scale change.}  
 	\label{fig:scale_change}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-08-04 19:32:17"}
-	  \caption{\textbf{Heavytailed:} $\eta_i$ is not $p$-variate Gaussian, but rather $p$-variate t, with $df=3$ .  } 
+	  \caption{\textbf{Heavytailed--} $\eta_i$ is not $p$-variate Gaussian, but rather $p$-variate t, with $df=3$ .  } 
 	\label{fig:t_null}
 	\end{subfigure}
 \end{figure}
@@ -842,13 +842,13 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05zoom"}
-	  \caption{\textbf{Low-Dimension:} False positive rates for $n=40$.} 
+	  \caption{\textbf{Low-Dimension--} False positive rates for $n=40$.} 
 	\label{fig:large_sample_1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-08-04 13:59:33zoom"}
-	  \caption{\textbf{High-Dimension:} False positive rates for $n=400$.} 
+	  \caption{\textbf{High-Dimension--} False positive rates for $n=400$.} 
 	\label{fig:large_sample_2}
 	\end{subfigure}
 \end{figure}
@@ -862,13 +862,13 @@ The reported power is the proportion of replication where the permutation p-valu
 	\begin{subfigure}{.4\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-08-11 08:32:39"}
-	  \caption{\textbf{High-Dimension, local alternative:} $n=400$, $\mu \in \frac{1}{\sqrt{10}} \times \set{0,1/4,1/2}.$} 
+	  \caption{\textbf{High-Dimension, local alternative--} $n=400$, $\mu \in \frac{1}{\sqrt{10}} \times \set{0,1/4,1/2}.$} 
 	\label{fig:large_sample_3}
 	\end{subfigure}
 		\begin{subfigure}{.4\textwidth}
 		  \centering
 		  \includegraphics[width=1\linewidth]{"art/2016-08-07 20:11:46"}
-		  \caption{\textbf{AR(1) dependence:} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
+		  \caption{\textbf{AR(1) dependence--} $\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.8$. } 
 		\label{fig:ar_1}
 	\end{subfigure}
 \end{figure}
