--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -395,8 +395,8 @@ For the details of the analysis see Appendix~\ref{apx:analysis} and \cite{gilron
 \label{sec:discussion}
 
 We have set out to understand which of the tests is more powerful: the accuracy test or the population test. 
-No amount of simulations can replace one single closed form analytic result. 
-The finite sample power of permutation tests is a formidable problem mathematical problem, so we currently content ourselves with simualtions. 
+No amount of simulations can replace the insight provided by a good closed-form analytic result. 
+The finite sample power of permutation tests is a formidable mathematical problem, so we currently content ourselves with simualtions. 
 We have concluded that the population tests are typically preferable. 
 Their high dimensional versions, such as \cite{srivastava_multivariate_2007} and \cite{schafer_shrinkage_2005},  are particularly well suited for neuroimaging problems such as MVPA.
 We attribute this to several phenomena: 
