--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -620,8 +620,9 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 \cite{olivetti_induction_2012} and \cite{olivetti_statistical_2014} looked into the problem of choosing a good accuracy test. 
 They propose a new test they call an \emph{independence test}, and demonstrate by simulation that it has more power than other accuracy tests, and can deal with non-balanced data sets. 
 We did not include this test in the battery we compared, but we note the following: 
-(a) The independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. This means that in the cases that the accuracy test is called upon for discriminating populations, it will probably be underpowered compared to population tests. 
+(a) The independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. It may thus be improved with the methods discussed in this section, before the application of \cite{olivetti_induction_2012}'s independence test. 
 (b) In contrast with the underlying motivation of \cite{olivetti_induction_2012}'s independence test, we did not find that balancing the data folds is crucial for an accuracy test. 
+
 
 \cite{golland_permutation_2005} study accuracy tests using simulation, neuroimaging data, genetic data, and analytically.
 Their analytic results formalize our intuition from Section~\ref{sec:introduction} on the effect of concentration of the accuracy statistic:
