--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -631,14 +631,13 @@ Like ourselves, they also find that the power incrasses with the size of the tes
 This is seen in their Figure~4, where the size of the test-set, $K$, governs the discretization. 
 Since they permute features, not labels, then all their permutation samples are balanced, and there is no issue of refolding. 
 
-\cite{golland_permutation_2005} simulate the power of accuracy tests by sampling from a Gaussian mixture family of models, an not from a location family as our own simulations. 
-Their parameter $p$ governing the separation between classes. 
+\cite{golland_permutation_2005} simulate the power of accuracy tests by sampling from a Gaussian mixture family of models, and not from a location family as our own simulations. 
 Under their model 
 $(x_i|y_i=1) \sim p \gauss{\mu_1,I}+ (1-p) \gauss{\mu_2,I}$ 
 and 
 $(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}$.
 Varying $p$ interpolates between the null distribution $(p=0.5)$ and a location shift model $(p=0)$. 
-We perform the same simulation as \cite{golland_permutation_2005}, after reparametrizing $p$ so that $p=0$ corresponds to the null model, and $p=23$ to be comparable to our other simulations.
+We now perform the same simulation as \cite{golland_permutation_2005}, after reparametrizing $p$ so that $p=0$ corresponds to the null model, and in the same dimensionality as our previous simualtions.
 We find that in this mixture class of models, like the location class of models, a population test has more power than an accuracy test (Figure~\ref{fig:golland}).
 %TODO: why number of folds matters?
 
