--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -638,8 +638,8 @@ and
 $(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}$.
 Varying $p$ interpolates between the null distribution $(p=0.5)$ and a location shift model $(p=0)$. 
 We now perform the same simulation as \cite{golland_permutation_2005}, after reparametrizing $p$ so that $p=0$ corresponds to the null model, and in the same dimensionality as our previous simualtions.
-We find that in this mixture class of models, like the location class of models, a population test has more power than an accuracy test (Figure~\ref{fig:golland}).
-%TODO: why number of folds matters?
+We find that also in this mixture class of models a population test has more power than an accuracy test (Figure~\ref{fig:golland}).
+
 
 
 \begin{figure}[ht]
