--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -626,6 +626,11 @@ Simulation details in Appendix~\ref{apx:simulation_details}.
 
 
 \subsection{Related Literature}
+\cite{ojala_permutation_2010} study the power of various accuracy tests.
+Their emphasis is the effect of the underlying classifier on the power. 
+They perform both a simulation study, and an empirical study, by applying various classifiers to various data sets. 
+
+
 \cite{olivetti_induction_2012} and \cite{olivetti_statistical_2014} looked into the problem of choosing a good accuracy test. 
 They propose a new test they call an \emph{independence test}, and demonstrate by simulation that it has more power than other accuracy tests, and can deal with non-balanced data sets. 
 We did not include this test in the battery we compared, but we note the following: 
@@ -661,11 +666,6 @@ We find that also in this mixture class of models a population test has more pow
 
 
 
-
-%TODO: discuss \cite{ojala_permutation_2010}
-% the problems they study: Test 1 versus Test 2
-% my simulated power to the analysis in Figure 6
-% the classifiers they compare
 
 
 
