--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -626,9 +626,11 @@ Simulation details in Appendix~\ref{apx:simulation_details}.
 
 
 \subsection{Related Literature}
-\cite{ojala_permutation_2010} study the power of various accuracy tests.
-Their emphasis is the effect of the underlying classifier on the power. 
-They perform both a simulation study, and an empirical study, by applying various classifiers to various data sets. 
+\cite{ojala_permutation_2010} study the power of two accuracy tests: one testing the ``no signal'' null hypothesis, and the other testing the ``independent features'' null hypothesis. 
+They perform an asymptotic analysis, and a simulation study. 
+They also apply various classifiers to various data sets. 
+Their emphasis is the effect of the underlying classifier on the power, and the potential of the ``independent features'' test for feature selection.
+This is a very different empasis from our own.
 
 
 \cite{olivetti_induction_2012} and \cite{olivetti_statistical_2014} looked into the problem of choosing a good accuracy test. 
