--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -603,19 +603,19 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 \end{tcolorbox}
 
 
-
+%TODO: update figure.
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.7\linewidth]{"art/2016-08-12 07:38:43"}
 	  \caption{
 \textbf{HighDim Classifier--} 
-The power of a permutation test with various test statistics. 
-The power on the $x$ axis. 
-Effect are color and shape coded. 
-The various statistics on the $y$ axis. 
-Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_3}. 
-Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
-Simulation details in Appendix~\ref{apx:simulation_details}.
+		The power of a permutation test with various test statistics. 
+		The power on the $x$ axis. 
+		Effect are color and shape coded. 
+		The various statistics on the $y$ axis. 
+		Their details are given in tables~\ref{tab:collected} and \ref{tab:collected_3}. 
+		Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
+		Simulation details in Appendix~\ref{apx:simulation_details}.
 } 
 	\label{fig:highdim}
 \end{figure}
